--- a/style.css
+++ b/style.css
@@ -12,4 +12,11 @@
 
 .forest-cube {
     border: 1px solid black; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.forest-cube i {
+    font-size: 3.5em;
 }
